# LightingNode

./: .gitignore  CMakeLists.txt  lighting.ncf
LightingNode.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
nbproject/: configurations.xml
src/: main.c
